input timer logic

--- a/src/style/style.css
+++ b/src/style/style.css
@@ -32,7 +32,12 @@ body {
     font-size: 2em; }
     body p a {
       text-decoration: underline;
-      border: none; }
+      border: none;
+      color: #221D54;
+      background-color: rgba(255, 231, 0, 0.16);
+      transition: ease-in-out 0.5s; }
+      body p a:hover {
+        background-color: rgba(255, 231, 0, 0.35); }
   body ul {
     list-style-type: none; }
   body hr {
