--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -35,6 +35,12 @@ p {
   a {
     text-decoration: underline;
     border: none;
+    color: #221D54;
+    background-color: rgba(255, 231, 0, 0.16);
+    transition: ease-in-out 0.5s;
+    &:hover {
+      background-color: rgba(255, 231, 0, 0.35);
+    }
   }
 }
 
